--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <hmtl>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
     <title>Quizzical</title>
 </head>
 
